<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">What\'s on</string>
    <string name="pick_times">Pick times</string>
    <string name="nothing_on">Nothing on</string>
    <string name="event_from">From %1$s</string>
    <string name="open_in_calendar">Open in Calendar</string>
    <string name="start_to_end">From %1$s to %2$s</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="new_event_tonight">Add event today</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_message">Delete this event?</string>
    <string name="cancel">Cancel</string>
    <string name="couldnt_delete_event">Couldn\'t delete the event</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="show_calendars">Calendars shown:</string>
    <string name="show_events_from_x_y">Show events from\n<xliff:g id="from" example="5:00pm">%1$s</xliff:g>\n to \n<xliff:g id="to" example="8:00pm">%2$s</xliff:g></string>
    <string name="start_time">Starting from</string>
    <string name="add_event">Add event</string>
    <string name="add">Add</string>
    <string name="event_name">Event name</string>
    <string name="default_event_start">%1$s</string>
    <string name="to">to</string>
    <string name="location">Location</string>
    <string name="hide">Hide</string>
    <string name="app_theme">App theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="default_theme">System</string>
    <string name="show_events_you_ve_not_replied_to">Show events you\'ve not replied to</string>
</resources>
