<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/toolbarStyle"
            app:navigationContentDescription="@string/back"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.compose.ui.platform.ComposeView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settingsCompose"/>

            <TextView
                android:id="@+id/settingsFromToTiming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/show_events_from_x_y"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColorLink="@color/colorPrimary" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showTentativeMeetings"
                app:showText="false"
                android:checked="false"
                style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                android:text="@string/show_events_you_ve_not_replied_to"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/show_calendars" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settingsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_calendar" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>